--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,6 @@
     <title>Chatbox</title>
   </head>
   <body>
-    <div id="root"></div> <!-- ✅ React va insérer ici ton app -->
+    <div id="root"></div>
   </body>
 </html>
